tunneling-outbound-traffic-k8s/external-forward-proxy/envoy-config.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: external-forward-proxy-config
data:
  envoy.yaml: |-
    admin:
      address:
        socket_address:
          address: 127.0.0.1
          port_value: 9902
    static_resources:
      listeners:
      - name: http_forward_proxy
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 3128
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              access_log:
              - name: envoy.access_loggers.file
                typed_config:
                  "@type": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog"
                  path: /var/log/access.log
                  format: "%DOWNSTREAM_REMOTE_ADDRESS% %REQ(:METHOD)% %UPSTREAM_HOST% %RESPONSE_CODE%\n"
              codec_type: HTTP1
              http_filters:
              - name: envoy.filters.http.dynamic_forward_proxy
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_forward_proxy.v3.FilterConfig
                  dns_cache_config:
                    name: dynamic_forward_proxy_cache_config
                    dns_lookup_family: V4_ONLY
                    typed_dns_resolver_config:
                      name: envoy.network.dns_resolver.cares
                      typed_config:
                        "@type": type.googleapis.com/envoy.extensions.network.dns_resolver.cares.v3.CaresDnsResolverConfig
                        resolvers:
                        - socket_address:
                            address: 8.8.8.8
                            port_value: 53
                        dns_resolver_options:
                          use_tcp_for_dns_lookups: true
                          no_default_search_domain: true
                        use_resolvers_as_fallback: true
              - name: envoy.filters.http.router
              http_protocol_options: {}
              http2_protocol_options:
                allow_connect: true
              route_config:
                name: default
                virtual_hosts:
                - name: forward_proxy
                  domains:
                  - "*"
                  routes:
                  - match:
                      connect_matcher: {}
                    route:
                      cluster: dynamic_forward_proxy_cluster
                      upgrade_configs:
                      - upgrade_type: CONNECT
                        connect_config: {}
              stat_prefix: http_forward_proxy
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                tls_certificates:
                - certificate_chain:
                    filename: /etc/pki/tls/certs/external-forward-proxy.external.svc.cluster.local.crt
                  private_key:
                    filename: /etc/pki/tls/private/external-forward-proxy.external.svc.cluster.local.key
      clusters:
      - name: dynamic_forward_proxy_cluster
        lb_policy: CLUSTER_PROVIDED
        cluster_type:
          name: envoy.clusters.dynamic_forward_proxy
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.clusters.dynamic_forward_proxy.v3.ClusterConfig
            dns_cache_config:
              name: dynamic_forward_proxy_cache_config
              dns_lookup_family: V4_ONLY
              typed_dns_resolver_config:
                name: envoy.network.dns_resolver.cares
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.network.dns_resolver.cares.v3.CaresDnsResolverConfig
                  resolvers:
                  - socket_address:
                      address: 8.8.8.8
                      port_value: 53
                  dns_resolver_options:
                    use_tcp_for_dns_lookups: true
                    no_default_search_domain: true
                  use_resolvers_as_fallback: true
