tunneling-outbound-traffic-k8s/external-forward-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-forward-proxy
spec:
  selector:
    app: external-forward-proxy
  ports:
  # Istio will deduce HTTP/1.1 protocol based on a name of a port
  - name: http-connect
    protocol: TCP
    port: 3128
    targetPort: 3128
